--- a/html/shortestPathPage.html
+++ b/html/shortestPathPage.html
@@ -6,23 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FastAid+</title>
   </head>
-  <link rel="stylesheet" href="/css/style.css" />
-  <link rel="stylesheet" href="/css/shortpath.css" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/shortpath.css" />
   <body>
     <nav class="navbar">
       <a href="../index.html" id="navlogo">
         <div class="footerlogo">
-          <img src="/images/logo.png" alt="error">
+          <img src="images/logo.png" alt="error">
         </div>
       <div class="menuBar">
         <ul>
           <li><a href="../index.html">HOME</a></li>
-          <li><a href="/html/nearesthospital.html">SEARCH</a></li>
+          <li><a href="html/nearesthospital.html">SEARCH</a></li>
           <!-- <li><a href="#about">ABOUT</a></li> -->
           <!-- <li><a href="./skills.html">SKILLS</a></li> -->
-          <li><a href="/html/contact.html">CONTACT</a></li>
-          <li><a href="/html/signup.html" id="signupnavbutton">SIGN UP</a></li>
-          <li><a href="/html/login.html" id="loginNavButton">LOGIN</a></li>
+          <li><a href="html/contact.html">CONTACT</a></li>
+          <li><a href="html/signup.html" id="signupnavbutton">SIGN UP</a></li>
+          <li><a href="html/login.html" id="loginNavButton">LOGIN</a></li>
         </ul>
       </div>
     </nav>
@@ -73,7 +73,7 @@
       <div class="footer">
         <div class="columns">
           <div class="footerlogo">
-            <img src="/images/logo.png" alt="error">
+            <img src="images/logo.png" alt="error">
           </div>
           <div class="footheading">Contact</div>
           <div class="contactdetail">
@@ -99,14 +99,14 @@
           <div class="detail">Privacy Policy</div>
 
           <div class="detail">Terms & Conditions</div>
-          <a href="/html/contact.html" style="text-decoration: none;"><div class="detail">Contact Us</div></a>
+          <a href="html/contact.html" style="text-decoration: none;"><div class="detail">Contact Us</div></a>
         </div>
         <div class="columns">
           <div class="footheading">My Account</div>
 
-          <a href="/html/signup.html" style="text-decoration: none;"><div class="detail">Sign Up</div></a>
+          <a href="html/signup.html" style="text-decoration: none;"><div class="detail">Sign Up</div></a>
 
-          <a href="/html/login.html" style="text-decoration: none;" ><div class="detail">Login</div></a>
+          <a href="html/login.html" style="text-decoration: none;" ><div class="detail">Login</div></a>
 
           <div class="detail">Help</div>
           
