--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
       <a href="index.html" id="navlogo">
         <div class="footerlogo">
-          <img src="/images/logo.png" alt="error">
+          <img src="images/logo.png" alt="error">
         </div>
       <div class="menuBar">
         <ul>
@@ -20,8 +20,8 @@
           <!-- <li><a href="#about">ABOUT</a></li> -->
           <!-- <li><a href="./skills.html">SKILLS</a></li> -->
           <!-- <li><a href="/html/contact.html">CONTACT</a></li> -->
-          <li><a href="/html/signup.html" id="signupnavbutton">SIGN UP</a></li>
-          <li><a href="/html/login.html" id="loginNavButton">LOGIN</a></li>
+          <li><a href="html/signup.html" id="signupnavbutton">SIGN UP</a></li>
+          <li><a href="html/login.html" id="loginNavButton">LOGIN</a></li>
         </ul>
       </div>
     </nav>
@@ -49,18 +49,18 @@
       <div class="left">
         <h1 id="heading">Welcome in FastAid<span class="medsign2">+</span></h1>
         <p id="tagline">we are here to help you in your critical time.</p>
-        <a href="/html/nearesthospital.html">
+        <a href="html/nearesthospital.html">
           <input type="button" value="Search Hospital" id="mainsearch"
         /></a>
       </div>
       <div class="right">
-        <img src="/images/ambulance-hero.webp" alt="" />
+        <img src="images/ambulance-hero.webp" alt="" />
       </div>
     </main>
     <section id="about">
       <div class="aboutTitle">ABOUT US</div>
       <div class="discription">
-        <img src="/images/image-3.png" alt="error" />
+        <img src="images/image-3.png" alt="error" />
         <div class="text">
           <p>
             We are developing a web application that would help patients in need
@@ -80,7 +80,7 @@
       <div class="footer">
         <div class="columns">
           <div class="footerlogo">
-            <img src="/images/logo.png" alt="error">
+            <img src="images/logo.png" alt="error">
           </div>
           <div class="footheading">Contact</div>
           <div class="contactdetail">
@@ -106,14 +106,14 @@
           <div class="detail">Privacy Policy</div>
 
           <div class="detail">Terms & Conditions</div>
-          <a href="/html/contact.html" style="text-decoration: none;"><div class="detail">Contact Us</div></a>
+          <a href="html/contact.html" style="text-decoration: none;"><div class="detail">Contact Us</div></a>
         </div>
         <div class="columns">
           <div class="footheading">My Account</div>
 
-          <a href="/html/signup.html" style="text-decoration: none;"><div class="detail">Sign Up</div></a>
+          <a href="html/signup.html" style="text-decoration: none;"><div class="detail">Sign Up</div></a>
 
-          <a href="/html/login.html" style="text-decoration: none;" ><div class="detail">Login</div></a>
+          <a href="html/login.html" style="text-decoration: none;" ><div class="detail">Login</div></a>
 
           <div class="detail">Help</div>
           
