--- a/html/hospitalDirection.html
+++ b/html/hospitalDirection.html
@@ -6,24 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FastAid+</title>
 </head>
-<link rel="stylesheet" href="/css/style.css">
-<link rel="stylesheet" href="/css/shortpath.css">
-<link rel="stylesheet" href="/css/hospitaldirection.css">
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/shortpath.css">
+<link rel="stylesheet" href="css/hospitaldirection.css">
 <body>
   <nav class="navbar">
     <a href="../index.html" id="navlogo">
       <div class="footerlogo">
-        <img src="/images/logo.png" alt="error">
+        <img src="images/logo.png" alt="error">
       </div>
     <div class="menuBar">
       <ul>
         <li><a href="../index.html">HOME</a></li>
-        <li><a href="/html/nearesthospital.html">SEARCH</a></li>
+        <li><a href="html/nearesthospital.html">SEARCH</a></li>
         <!-- <li><a href="#about">ABOUT</a></li> -->
         <!-- <li><a href="./skills.html">SKILLS</a></li> -->
-        <li><a href="/html/contact.html">CONTACT</a></li>
-        <li><a href="/html/signup.html" id="signupnavbutton">SIGN UP</a></li>
-        <li><a href="/html/login.html" id="loginNavButton">LOGIN</a></li>
+        <li><a href="html/contact.html">CONTACT</a></li>
+        <li><a href="html/signup.html" id="signupnavbutton">SIGN UP</a></li>
+        <li><a href="html/login.html" id="loginNavButton">LOGIN</a></li>
       </ul>
     </div>
   </nav>
@@ -65,7 +65,7 @@
       <div class="mapdiv">
 
         <div id="hospitalimg">
-          <img src="/images/chirayu.jpg" alt="">
+          <img src="images/chirayu.jpg" alt="">
         </div>
         <div id="map">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3556.3176493996575!2d75.68452745079419!3d26.956838383025772!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396c4d1ef6c6eb79%3A0x7a003964884c375e!2sCHIRAYU%20HOSPITAL%2C%20Hathod%2C%20Rajasthan%20302012!5e0!3m2!1sen!2sin!4v1673098391151!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -75,7 +75,7 @@
         <div class="footer">
           <div class="columns">
             <div class="footerlogo">
-              <img src="/images/logo.png" alt="error">
+              <img src="images/logo.png" alt="error">
             </div>
             <div class="footheading">Contact</div>
             <div class="contactdetail">
@@ -101,14 +101,14 @@
             <div class="detail">Privacy Policy</div>
   
             <div class="detail">Terms & Conditions</div>
-            <a href="/html/contact.html" style="text-decoration: none;"><div class="detail">Contact Us</div></a>
+            <a href="html/contact.html" style="text-decoration: none;"><div class="detail">Contact Us</div></a>
           </div>
           <div class="columns">
             <div class="footheading">My Account</div>
   
-            <a href="/html/signup.html" style="text-decoration: none;"><div class="detail">Sign Up</div></a>
+            <a href="html/signup.html" style="text-decoration: none;"><div class="detail">Sign Up</div></a>
   
-            <a href="/html/login.html" style="text-decoration: none;" ><div class="detail">Login</div></a>
+            <a href="html/login.html" style="text-decoration: none;" ><div class="detail">Login</div></a>
   
             <div class="detail">Help</div>
             
