--- a/html/signup.html
+++ b/html/signup.html
@@ -6,23 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FastAid+</title>
   </head>
-  <link rel="stylesheet" href="/css/style.css" />
-  <link rel="stylesheet" href="/css/signup.css" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/signup.css" />
   <body>
     <nav class="navbar">
       <a href="../index.html" id="navlogo">
         <div class="footerlogo">
-          <img src="/images/logo.png" alt="error">
+          <img src="images/logo.png" alt="error">
         </div>
       <div class="menuBar">
         <ul>
           <li><a href="../index.html">HOME</a></li>
-          <li><a href="/html/nearesthospital.html">SEARCH</a></li>
+          <li><a href="html/nearesthospital.html">SEARCH</a></li>
           <!-- <li><a href="#about">ABOUT</a></li> -->
           <!-- <li><a href="./skills.html">SKILLS</a></li> -->
-          <li><a href="/html/contact.html">CONTACT</a></li>
-          <li><a href="/html/signup.html" id="signupnavbutton">SIGN UP</a></li>
-          <li><a href="/html/login.html" id="loginNavButton">LOGIN</a></li>
+          <li><a href="html/contact.html">CONTACT</a></li>
+          <li><a href="html/signup.html" id="signupnavbutton">SIGN UP</a></li>
+          <li><a href="html/login.html" id="loginNavButton">LOGIN</a></li>
         </ul>
       </div>
     </nav>
@@ -30,7 +30,7 @@
 
     <div id="loginform">
       <div id="loginimage">
-        <img src="/images/ambulance-hero.webp" alt="error" />
+        <img src="images/ambulance-hero.webp" alt="error" />
       </div>
 
       <div class="form">
@@ -75,10 +75,10 @@
             />
           </div>
             <div class="submit formi-div">
-              <a href="/html/index.html"> <input type="button" value="Sign Up" class="btn" /></a>
+              <a href="html/index.html"> <input type="button" value="Sign Up" class="btn" /></a>
             </div>
          <div class="logquestion">
-          Already Have An Account?<a href="/html/login.html">Login Here</a>
+          Already Have An Account?<a href="html/login.html">Login Here</a>
          </div>
         </form>
       </div>
@@ -87,7 +87,7 @@
       <div class="footer">
         <div class="columns">
           <div class="footerlogo">
-            <img src="/images/logo.png" alt="error">
+            <img src="images/logo.png" alt="error">
           </div>
           <div class="footheading">Contact</div>
           <div class="contactdetail">
@@ -113,14 +113,14 @@
           <div class="detail">Privacy Policy</div>
 
           <div class="detail">Terms & Conditions</div>
-          <a href="/html/contact.html" style="text-decoration: none;"><div class="detail">Contact Us</div></a>
+          <a href="html/contact.html" style="text-decoration: none;"><div class="detail">Contact Us</div></a>
         </div>
         <div class="columns">
           <div class="footheading">My Account</div>
 
-          <a href="/html/signup.html" style="text-decoration: none;"><div class="detail">Sign Up</div></a>
+          <a href="html/signup.html" style="text-decoration: none;"><div class="detail">Sign Up</div></a>
 
-          <a href="/html/login.html" style="text-decoration: none;" ><div class="detail">Login</div></a>
+          <a href="html/login.html" style="text-decoration: none;" ><div class="detail">Login</div></a>
 
           <div class="detail">Help</div>
           
