--- a/html/nearesthospital.html
+++ b/html/nearesthospital.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FirstAid+</title>
 </head>
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/sevirity.css">
+<link rel="stylesheet" href="/css/contact.css">
+<link rel="stylesheet" href="/css/sevirity.css">
 <body>
   <nav class="navbar">
     <a href="../index.html" id="navlogo">
@@ -56,9 +56,9 @@
           <div id="ruleTitle">Severity Rules</div>
           <div id="rules">
             
-            <p>1) Enter <span>VH</span>  if the condition is very critical and may have a high blood loss or any other high risky issues.</p>
-            <p>2) Enter <span>M</span> if the condition is not very critical but need to do dressing and have little blood loss and not high internl injury.</p>
-            <p>3) Enter <span>L</span> if the condition is normal and just have little scratches and just need to do a chechkup.</p>
+            <p>1 Enter <span>VH</span>  if the condition is very critical and may have a high blood loss or any other high risky issues.</p>
+            <p>2.Enter <span>M</span> if the condition is not very critical but need to do dressing and have little blood loss and not high internl injury.</p>
+            <p>3.Enter <span>L</span> if the condition is normal and just have little scratches and just need to do a chechkup.</p>
             
           </div>
           <img src="images/PngItem_4414060.png" alt="error" id="sevirityimg">
