--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FastAid+</title>
 </head>
-<link rel="stylesheet" href="/css/style.css">
-<link rel="stylesheet" href="/css/contact.css">
+<link rel="stylesheet" href="css/contact.css">
+<link rel="stylesheet" href="css/style.css">
 <body>
   <nav class="navbar">
     <a href="../index.html" id="navlogo">
