--- a/shortestPathPage.html
+++ b/shortestPathPage.html
@@ -17,12 +17,12 @@
       <div class="menuBar">
         <ul>
           <li><a href="../index.html">HOME</a></li>
-          <li><a href="html/nearesthospital.html">SEARCH</a></li>
+          <li><a href="nearesthospital.html">SEARCH</a></li>
           <!-- <li><a href="#about">ABOUT</a></li> -->
           <!-- <li><a href="./skills.html">SKILLS</a></li> -->
-          <li><a href="html/contact.html">CONTACT</a></li>
-          <li><a href="html/signup.html" id="signupnavbutton">SIGN UP</a></li>
-          <li><a href="html/login.html" id="loginNavButton">LOGIN</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
+          <li><a href="signup.html" id="signupnavbutton">SIGN UP</a></li>
+          <li><a href="login.html" id="loginNavButton">LOGIN</a></li>
         </ul>
       </div>
     </nav>
@@ -38,12 +38,12 @@
             id="accidentlocation"
             placeholder="Enter accident location"
           />
-          <a href="/html/shortestPathPage.html"
+          <a href="/shortestPathPage.html"
             ><input type="button" id="enterbutton" value="Enter"
           /></a>
         </div>
         <div id="nearhospital">
-          <a href="/html/nearesthospital.html"><input type="button" value="Search nearest hospital" id="search" /></a>
+          <a href="/nearesthospital.html"><input type="button" value="Search nearest hospital" id="search" /></a>
         </div>
       </header> -->
 
@@ -99,14 +99,14 @@
           <div class="detail">Privacy Policy</div>
 
           <div class="detail">Terms & Conditions</div>
-          <a href="html/contact.html" style="text-decoration: none;"><div class="detail">Contact Us</div></a>
+          <a href="contact.html" style="text-decoration: none;"><div class="detail">Contact Us</div></a>
         </div>
         <div class="columns">
           <div class="footheading">My Account</div>
 
-          <a href="html/signup.html" style="text-decoration: none;"><div class="detail">Sign Up</div></a>
+          <a href="signup.html" style="text-decoration: none;"><div class="detail">Sign Up</div></a>
 
-          <a href="html/login.html" style="text-decoration: none;" ><div class="detail">Login</div></a>
+          <a href="login.html" style="text-decoration: none;" ><div class="detail">Login</div></a>
 
           <div class="detail">Help</div>
           
