--- a/contact.html
+++ b/contact.html
@@ -10,13 +10,13 @@
 <link rel="stylesheet" href="css/style.css">
 <body>
   <nav class="navbar">
-    <a href="../index.html" id="navlogo">
+    <a href="index.html" id="navlogo">
       <div class="footerlogo">
         <img src="images/logo.png" alt="error">
       </div>
     <div class="menuBar">
       <ul>
-        <li><a href="../index.html">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
         <li><a href="nearesthospital.html">SEARCH</a></li>
         <!-- <li><a href="#about">ABOUT</a></li> -->
         <!-- <li><a href="./skills.html">SKILLS</a></li> -->
